# corewar

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  compile.sh  ft_error.c  generate.sh  main.c  merge_sort.c  swap  swap.h  utils1.c
assets/: bidon.cor  bidon.s  helltrain.cor  helltrain.s
vm/: Makefile  corewar
vm/includes/: decode.h  error.h  loop.h  mnemonic.h  op.h  options.h  parse.h  termcolor.h  utils.h  vm.h
vm/srcs/: decode.c  error.c  fetch.c  init.c  loop.c  main.c  memory.c  options.c  parse.c  utils.c
vm/srcs/ops/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
